<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/transaction_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bought_coke"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/transaction_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_item_transaction"
        android:textAlignment="textEnd"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_3_00"
        android:textSize="16sp"
        android:textAlignment="textEnd" />

</LinearLayout>
