<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="105dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="105dp">

        <TextView
            android:id="@+id/categoryExpense"
            android:layout_width="233dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/kfc_streetwise_2"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="29sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayCost"
            android:layout_width="83dp"
            android:layout_height="23dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:text="@string/r_4000_00"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayCategory"
            android:layout_width="69dp"
            android:layout_height="23dp"
            android:layout_marginStart="18dp"
            android:text="@string/food_transaction_item"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryExpense" />

        <TextView
            android:id="@+id/displayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateHere"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textSize="15sp"
            android:layout_marginStart="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayCategory"  />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>