<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:background="@drawable/blue5_rounded_border">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="373dp"
        android:layout_height="159dp"
        android:layout_below="@+id/welcomeTextView"
        android:background="@drawable/blue5_rounded_border">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="3dp"
            android:text="@string/available_budget"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/availableBudgetForMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv1"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="47dp"
            android:text="@string/r0_00"
            android:textColor="@color/blue_1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:paddingTop="20dp"
            android:layout_marginTop="61dp"
            android:text="@string/budget_zar"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_below="@id/availableBudgetForMonth"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingTop="20dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="61dp"
            android:text="@string/transactions"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_below="@id/availableBudgetForMonth"/>

        <TextView
            android:id="@+id/availableBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="114dp"
            android:text="@string/r0_00"
            android:textColor="@color/blue_1"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/totalTransactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="221dp"
            android:layout_marginTop="112dp"
            android:text="@string/_000"
            android:textColor="@color/blue_1"
            android:textSize="25sp" />

    </RelativeLayout>

</LinearLayout>
